--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,11 +13,10 @@
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Plaintext"
-        android:inputType="textPersonName"
+        android:inputType="text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
@@ -30,7 +29,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Ciphertext"
-        android:inputType="textPersonName"
+        android:inputType="text"
         app:layout_constraintLeft_toLeftOf="@+id/plainText_et"
         app:layout_constraintRight_toRightOf="@+id/plainText_et"
         app:layout_constraintTop_toBottomOf="@+id/plainText_et"
@@ -90,13 +89,24 @@
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="76dp"
         android:text="Key"
         android:textSize="@android:dimen/notification_large_icon_width"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shift_et"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1" />
+
+    <Button
+        android:id="@+id/clear_b"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="CLEAR"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/shift_et"
+        app:layout_constraintTop_toBottomOf="@+id/encrypt_b" />
 
 </android.support.constraint.ConstraintLayout>
